# csce-5380-project

./: .gitignore  CSCE_5380_Project.ipynb  DBSCAN.py  DecisionTree.py  KMeans.py  Manifest.toml  NaiveBayes.py  Project.toml  README.md  install.sh  loadZoo.jl  loadZoo_local.jl  pyproject.toml  run.sh  uninstall.sh  unsupervised-audio-mining.ipynb  unsupervised-audio-mining.jl  zoo.csv  zoo.toml
.ipynb_checkpoints/: unsupervised-audio-mining-checkpoint.ipynb
