[tool.poetry]
name = "csce-5380-project"
version = "0.1.0"
description = ""
authors = ["Joshua Higginbotham <jhigginbotham64@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.0"
matplotlib = "^3.5.1"
scikit-learn = "^1.0.2"
pandas = "^1.3.5"
ipython = "^7.30.1"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
